<resources>
    <string name="app_name">Andevcon Boston 2016 MetaWear Class</string>
    <string name="error_no_bluetooth">Bluetooth device not deteted</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="label_ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="error_title">Error</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="pairing_title">Pair Device</string>
    <string name="pairing_text">Do you see a blinking blue LED on the MetaWear?</string>
    <string name="temperature_text">Temperature</string>
    <string name="start_temperature_stream">Start Temperature Stream</string>
    <string name="stop_temperature_stream">Stop Temperature Stream</string>
    <string name="start_accelerometer">Start Accelerometer</string>
    <string name="stop_accelerometer">Stop Accelerometer</string>
    <string name="start_step_count">Start Step Count</string>
    <string name="stop_step_count">Stop Step Count</string>
    <string name="x_text">X</string>
    <string name="y_text">Y</string>
    <string name="z_text">Z</string>
</resources>
