<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.polyglotprogramminginc.andevconboston2016metawearclass.MWDeviceConfirmationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pairing_title"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pairing_text"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_no"
            android:id="@+id/confirm_no"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="75dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_yes"
            android:id="@+id/confirm_yes"
            android:layout_gravity="right"
            android:layout_alignTop="@+id/confirm_no"
            android:layout_alignParentEnd="true" />



    </RelativeLayout>

</FrameLayout>
