<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.polyglotprogramminginc.andevcon.AccelerometerFragment">

    <!-- TODO: Update blank fragment layout -->
    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/x_text" />

            <TextView
                android:id="@+id/x_reading"
                android:layout_width="0dp"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRowy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/y_text" />

            <TextView
                android:id="@+id/y_reading"
                android:layout_width="0dp"
                android:layout_weight="1" />


        </TableRow>

        <TableRow
            android:id="@+id/tableRowz"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/z_text" />

            <TextView
                android:id="@+id/z_reading"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>


        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_accelerometer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_accelerometer" />
        </TableRow>

    </TableLayout>
</FrameLayout>
